--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" manifest="%PUBLIC_URL%/example.appcache">
+    <meta charset="utf-8" manifest="example.appcache">
     <meta name="description" content="Marvel Legends Checklist">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -46,5 +46,14 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+        <script>   
+          if(navigator.serviceWorker){
+              navigator.serviceWorker.register('%PUBLIC_URL%/service_worker.js').then(function(reg){
+                  console.log('serviceWorker WORKED');              
+              }).catch(function(){
+                  console.log('serviceWorker FAILED');
+              });          
+          }
+        </script>     
   </body>
 </html>
