--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <title>Marvel Legends Checklist</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Marvel Legends Checklist</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
